# UniversalPolicies

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py
data/EXAMPLES/: goto_1_0_action_space_random.pkl  goto_1_3_action_space_random.pkl  goto_large_1_7_action_space_random.pkl
data/GOTO/all_diagonal_83_4_0_False_demos/: dataset_83.pkl
data/GOTO/diagonal_83_4_0_False_demos/: dataset_83.pkl
data/GOTO/dir8_83_4_0_False_demos/: dataset_83.pkl
data/GOTO/left_right_83_4_0_False_demos/: dataset_83.pkl
data/GOTO/mixed_83_4_0_False_demos/: dataset_83.pkl
data/GOTO/no_left_83_4_0_False_demos/: dataset_83.pkl
data/GOTO/no_right_83_4_0_False_demos/: dataset_83.pkl
data/GOTO/standard_83_4_0_False_demos/: dataset_83.pkl
data/GOTO/wsad_83_4_0_False_demos/: dataset_83.pkl
diffusion_nl/diffuser_agent/: agent.py  eval.py
diffusion_nl/diffuser_agent/configs/: goto_distractors.yaml  goto_distractors_large.yaml  ivd_goto_distractors.yaml
diffusion_nl/diffuser_agent/scripts/: eval.sh  eval_30000.sh  eval_4_seeds.sh  eval_500_standard.sh  eval_agent_type.sh  eval_agentid.sh  eval_example.sh  eval_extended.sh  eval_finetune.sh  eval_finetune_2.sh  eval_go_to_large_mixed_action_space.sh  eval_go_to_large_standard_150000.sh  eval_go_to_large_test.sh  eval_mixed.sh  eval_mixed_action_space.sh  eval_multi_agent.sh  eval_multi_agent_2.sh  (+5 more)
diffusion_nl/diffusion_model/: data.py  model.py  test.py  train.py  utils.py
diffusion_nl/distillation/: distill.py  model.py
diffusion_nl/imitation_learning/: data.py  eval.py  model.py  test_performance.py  train.py
diffusion_nl/ivd_model/: data.py  model.py  test.py  train.py
diffusion_nl/utils/: data.py  environments.py  models.py  networks.py  utils.py  visualize.py
diffusion_nl/visualizations/: statistics.py  vis.py
universal_policies.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
universal_policies/diffuser_agent/: agent.py  eval.py
universal_policies/diffusion_model/: data.py  model.py  train.py  utils.py
universal_policies/imitation_learning/: data.py  eval.py  model.py  train.py
universal_policies/ivd_model/: data.py  model.py  train.py
universal_policies/utils/: models.py  networks.py  utils.py
(+165 files in other folders)
